syntax = "proto3";

package dfs;
option go_package = "github.com/uttam-li/dfs/api/generated/common";

// File attributes used across services
message FileAttributes {
    uint32 mode = 1;
    uint32 uid = 2;
    uint32 gid = 3;
    uint64 size = 4;
    int64 atime = 5;
    int64 mtime = 6;
    int64 ctime = 7;
    uint32 nlink = 8;
    uint64 blocks = 9;
}

// Chunk location information
message ChunkLocation {
    string server_id = 1;
    string address = 2;
    uint32 version = 3;
    bool is_primary = 4;
    int64 lease_expiry = 5;
}